--- a/daw/plantillas/plantillaApuntes.html
+++ b/daw/plantillas/plantillaApuntes.html
@@ -32,7 +32,7 @@
         </ul>
         <!-- subTITULO -->
         <h3 class="subTitulo" id="unoDos">subTitulo</h3>
-        <p><b>NEGRITA</b></p>
+        <p><strong>NEGRITA</strong></p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat dolor ex odio totam repudiandae, quo fuga nisi placeat laudantium eaque odit suscipit dolores et, ipsum voluptates!</p>
         <!-- APARTADO -->
         <h4 class="apartado">Apartado</h4>
@@ -66,14 +66,14 @@
         </table>
         <!-- LISTA + LISTA -->
         <ul>
-          <li><b>Título:</b> descripción</li>
-          <li><b>Título:</b> descripción:
+          <li><strong>Título:</strong> descripción</li>
+          <li><strong>Título:</strong> descripción:
               <ul>
-                  <li><b>Título:</b> descripción</li>
-                  <li><b>Título:</b> descripción</li>
+                  <li><strong>Título:</strong> descripción</li>
+                  <li><strong>Título:</strong> descripción</li>
               </ul>
           </li>
-          <li><b>Título:</b> descripción</li>
+          <li><strong>Título:</strong> descripción</li>
         </ul>
           <!-- MENÚ OPCIONAL -->
         <div class="menuOpcional">
