--- a/daw/proUno/proCuatro.html
+++ b/daw/proUno/proCuatro.html
@@ -137,18 +137,18 @@
       <h4 class="subTitulo_4">Vemos el significado de cada parte:</h4>
       <ul>
         <li>
-          <b>Modificadores:</b> conjunto de palabras reservadas que modifican o aplican propiedades a la función.
+          <strong>Modificadores:</strong> conjunto de palabras reservadas que modifican o aplican propiedades a la función.
           <ul>
-            <li><b>Public:</b> el acceso no está restringido</li>
-            <li><b>Private:</b> el acceso está limitado a la misma clase</li>
-            <li><b>Protected:</b> el acceso está limitado a la clase contenedora o a los tipos derivados de la clase contenedora.</li>
-            <li><b>Internal:</b> el acceso no está restringido, siempre y cuando sea dentro del mismo ensamblado. Un ensamblado es un conjunto de tipos que se compilan para obtener la misma solución. Si no indicamos un modificador, por defecto tendrán un nivel de accesibilidad internal.</li>
+            <li><strong>Public:</strong> el acceso no está restringido</li>
+            <li><strong>Private:</strong> el acceso está limitado a la misma clase</li>
+            <li><strong>Protected:</strong> el acceso está limitado a la clase contenedora o a los tipos derivados de la clase contenedora.</li>
+            <li><strong>Internal:</strong> el acceso no está restringido, siempre y cuando sea dentro del mismo ensamblado. Un ensamblado es un conjunto de tipos que se compilan para obtener la misma solución. Si no indicamos un modificador, por defecto tendrán un nivel de accesibilidad internal.</li>
           </ul>
         </li>
-        <li><b>Tipo:</b> al igual que las variables poseen un tipo, el dato que devuelven es de un tipo determinado.</li>
-        <li><b>Nombre de la función:</b> es el identificador de la función, lo usaremos para referenciarla.</li>
-        <li><b>Parámetros de entrada:</b> una lista de variables que recibirá la función en el momento de su llamada. Es posible que no requiera parámetros.</li>
-        <li><b>Return:</b> si nuestro método está tipado, es obligatorio que devuelva un valor del tipo adecuado. Utiliza la palabra reservada return.</li>
+        <li><strong>Tipo:</strong> al igual que las variables poseen un tipo, el dato que devuelven es de un tipo determinado.</li>
+        <li><strong>Nombre de la función:</strong> es el identificador de la función, lo usaremos para referenciarla.</li>
+        <li><strong>Parámetros de entrada:</strong> una lista de variables que recibirá la función en el momento de su llamada. Es posible que no requiera parámetros.</li>
+        <li><strong>Return:</strong> si nuestro método está tipado, es obligatorio que devuelva un valor del tipo adecuado. Utiliza la palabra reservada return.</li>
       </ul>
     </article>
     <article class="articuloApuntes">
@@ -312,17 +312,17 @@
       <h4 class="subTitulo_4">Veamos cómo funcionan cada una de estas etapas:</h4>
       <ul>
         <li>
-          <b>Compilación</b>
+          <strong>Compilación</strong>
           <p>
             Mientras vamos escribiendo el entorno de desarrollo va haciendo comprobaciones para exponer los errores que podrían persistir en el código. Son denominados errores de compilación. 
           </p>
         </li>
         <li>
-          <b>Vinculación</b>
+          <strong>Vinculación</strong>
           <p>Todos los programas hacen uso de bibliotecas y algunos utilizan clases diseñadas por el programador. Las clases se vinculan cuando el programa empieza a ejecutarse, son los IDE los que comprueban que los métodos que se invoquen existan, y que coincidan con su tipo y parámetros.</p>
         </li>
         <li>
-          <b>Ejecución</b>
+          <strong>Ejecución</strong>
           <p>
             Si se llega a la fase de ejecución significa que nuestro porgrama no contiene errores, pero todavía no sabemos si el resultado es el correcto. Los errores lógicos son los más complicados de detectar. Estos pueden producir cambios inesperados, por lo que debemos comenzar con un proceso de depuración en el que vamos a ir comprobando, paso a paso cómo va a funcionar nuestro programa.
           </p>
