--- a/daw/proUno/proDos.html
+++ b/daw/proUno/proDos.html
@@ -38,9 +38,9 @@
     </article> 
     <article class="articuloApuntes">
       <ul>
-        <li><b>Editor de código fuente:</b> Ayuda a escribir el código resaltando la sintaxis de forma visual y rellenando de forma automática las distintas opciones que nos proporciona el lenguaje.</li>
-        <li><b>Depurador:</b> Localiza errores de código.</li>
-        <li><b>Compilación del código fuente:</b> Un código binario entendible por la máquina.</li>
+        <li><strong>Editor de código fuente:</strong> Ayuda a escribir el código resaltando la sintaxis de forma visual y rellenando de forma automática las distintas opciones que nos proporciona el lenguaje.</li>
+        <li><strong>Depurador:</strong> Localiza errores de código.</li>
+        <li><strong>Compilación del código fuente:</strong> Un código binario entendible por la máquina.</li>
       </ul>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
@@ -51,18 +51,18 @@
     <article class="articuloApuntes">
       <p>Un programa es una secuencia de intrucciones separadas por un punto y coma que se van a ir agrupando en diferentes bloques mediante llaves.</p>
       <p>Cuando creamos un nuevo proyecto, se crea la siguiente estructura.</p>
-      <p>Primero nos crea la clase <b>program</b>. Una <b>clase</b> es una estructura de datos que está compuesta por atributos o variables y métodos o funciones.</p>
-      <p>El método principal se denomina <b>Main</b>. Será el primero en ejecutarse en nuestro programa. Este tiene una serie de argumentos, que son cadenas de caracteres que podemos pasar línea de comandos.</p>
+      <p>Primero nos crea la clase <strong>program</strong>. Una <strong>clase</strong> es una estructura de datos que está compuesta por atributos o variables y métodos o funciones.</p>
+      <p>El método principal se denomina <strong>Main</strong>. Será el primero en ejecutarse en nuestro programa. Este tiene una serie de argumentos, que son cadenas de caracteres que podemos pasar línea de comandos.</p>
     </article>
     <h4 class="subTitulo_4">Entrada y salida por pantalla</h4>
     <article class="articuloApuntes">
-      <p>Emplearemos la clase <b>Console</b> para establecer la comunicación entre usuario y el programa.</p>
-      <p>Para la salida por pantalla, vamos utilizar los métodos de esta clase, <b>Write</b> y <b>Writeline:</b></p>
+      <p>Emplearemos la clase <strong>Console</strong> para establecer la comunicación entre usuario y el programa.</p>
+      <p>Para la salida por pantalla, vamos utilizar los métodos de esta clase, <strong>Write</strong> y <strong>Writeline:</strong></p>
     </article>
     <article class="articuloApuntes">
       <ul>
-        <li><b>Write()</b> escribe un valor o valores especificados en el flujo de salida estándar.</li>
-        <li><b>WriteLine()</b> escribe un valor o valores especificado y se realiza un salto de línea en nuestra consola.</li>
+        <li><strong>Write()</strong> escribe un valor o valores especificados en el flujo de salida estándar.</li>
+        <li><strong>WriteLine()</strong> escribe un valor o valores especificado y se realiza un salto de línea en nuestra consola.</li>
       </ul>
       <p>
         <pre>
@@ -78,9 +78,9 @@
       </p>
     </article>
     <article class="articuloApuntes">
-      <p>Para la entrada de datos, utilizaremos el método <b>ReadLine()</b>. Este leerá el dato introducido por el usuario y devolverá un dato de tipo cadena (string).</p>
-      <p>Otro método es <b>Read()</b>, que leerá el dato introducido y devolverá un dato tipo entero (int).</p>
-      <p>También podemos utilizar <b>ReadKey()</b>, aquí se obtiene el carácter presionado por el usuario y se muestra esta tecla por la pantalla.</p>
+      <p>Para la entrada de datos, utilizaremos el método <strong>ReadLine()</strong>. Este leerá el dato introducido por el usuario y devolverá un dato de tipo cadena (string).</p>
+      <p>Otro método es <strong>Read()</strong>, que leerá el dato introducido y devolverá un dato tipo entero (int).</p>
+      <p>También podemos utilizar <strong>ReadKey()</strong>, aquí se obtiene el carácter presionado por el usuario y se muestra esta tecla por la pantalla.</p>
       <p>
         <pre>
           <code>
@@ -95,25 +95,25 @@
     <a name="2.2"></a>
     <h3 class="subTitulo_3">Variables. Usos y Tipos</h3>
     <article class="articuloApuntes">
-      <p>Una <b>variable</b> es una estructura de datos que ocupan un espacio en memoria y pueden variar a lo largo de un programa.</p>
-      <p>Cuando <b>declaramos una variable</b> establecemos el tipo de dato (entero, cadena, carácter, etc) y su identificador.</p>
+      <p>Una <strong>variable</strong> es una estructura de datos que ocupan un espacio en memoria y pueden variar a lo largo de un programa.</p>
+      <p>Cuando <strong>declaramos una variable</strong> establecemos el tipo de dato (entero, cadena, carácter, etc) y su identificador.</p>
     </article>
     <h4 class="subTitulo_4">Tipos de datos en C#:</h4>
     <article class="articuloApuntes">
       <ul>
-        <li><b>Enteros con signo:</b> Sbyte, short, int, long.</li>
-        <li><b>Enteros sin signo:</b> Byte, unshort, unit, ulong.</li>
-        <li><b>Punto flotante:</b> Float, double.</li>
-        <li><b>Uno o varios caracteres:</b> Char.</li>
-        <li><b>Decimal de alta precisión:</b> Decimal.</li>
-        <li><b>Booleano:</b> Bool</li>
+        <li><strong>Enteros con signo:</strong> Sbyte, short, int, long.</li>
+        <li><strong>Enteros sin signo:</strong> Byte, unshort, unit, ulong.</li>
+        <li><strong>Punto flotante:</strong> Float, double.</li>
+        <li><strong>Uno o varios caracteres:</strong> Char.</li>
+        <li><strong>Decimal de alta precisión:</strong> Decimal.</li>
+        <li><strong>Booleano:</strong> Bool</li>
       </ul>
     </article>
     <article class="articuloApuntes">
-      <p><b>Tipo Sting:</b> son cadenas de caracteres.</p>
-      <p><b>Tipo de dato enumerado, enum:</b> días_semana {lunes, martes, miercoles};</p>
+      <p><strong>Tipo Sting:</strong> son cadenas de caracteres.</p>
+      <p><strong>Tipo de dato enumerado, enum:</strong> días_semana {lunes, martes, miercoles};</p>
       <p>Tipos matriz: Unidimensionales y Multidimensionales.</p>
-      <p>Para <b>definir una variable</b>, primero necesitamos conocer el tipo de datos que va almacenar y el nombre que le vamos asignar. Es importante que el nombre sea identificativo con su contenido.</p>
+      <p>Para <strong>definir una variable</strong>, primero necesitamos conocer el tipo de datos que va almacenar y el nombre que le vamos asignar. Es importante que el nombre sea identificativo con su contenido.</p>
     </article>
     <h4 class="subTitulo_4">Para identificar a una variable, debemos seguir una serie de normas:</h4>
     <article class="articuloApuntes">  
@@ -133,8 +133,8 @@
     <h4 class="subTitulo_4">Las variables pueden ser dependiendo de su ámbito:</h4>
     <article class="articuloApuntes">
       <ul>
-        <li><b>Variables locales:</b> aquellas declaradas <b>dentro</b> de un método o función.</li>
-        <li><b>Variables globales:</b> aquellas declaradas <b>fuera</b> de un método o función. Podemos acceder a ellas desde cualquier punto del programa.</li>
+        <li><strong>Variables locales:</strong> aquellas declaradas <strong>dentro</strong> de un método o función.</li>
+        <li><strong>Variables globales:</strong> aquellas declaradas <strong>fuera</strong> de un método o función. Podemos acceder a ellas desde cualquier punto del programa.</li>
       </ul>
     </article>
     <article class="articuloApuntes">
@@ -147,27 +147,27 @@
     <h3 class="subTitulo_3">Constantes y Literales. Tipos y utilidades</h3>
     <h4 class="subTitulo_4">Constantes</h4>
     <article class="articuloApuntes">  
-      <p>Son aquellas cuyo contenido no se puede alterar a lo largo del programa. La palabra reservada es <b>const</b>, y se definen fuera del cuerpo de cualquier función, normalmente al principio del programa.</p>
+      <p>Son aquellas cuyo contenido no se puede alterar a lo largo del programa. La palabra reservada es <strong>const</strong>, y se definen fuera del cuerpo de cualquier función, normalmente al principio del programa.</p>
     </article>
     <h4 class="subTitulo_4">Literales</h4>
     <article class="articuloApuntes">
       <p>Así podemos representar de forma explícita todos los valores que pueden tomar los tipos básicos del lenguaje.</p>
     </article>
     <article class="articuloApuntes">
-      <p><b>Literales enteros:</b></p>
+      <p><strong>Literales enteros:</strong></p>
       <ul>
-        <li><b>Decimales:</b> sin ningún prefijo.</li>
-        <li><b>Hexadecimales:</b> con el prefijo de 0x o 0X.</li>
+        <li><strong>Decimales:</strong> sin ningún prefijo.</li>
+        <li><strong>Hexadecimales:</strong> con el prefijo de 0x o 0X.</li>
       </ul>
     </article>  
     <article class="articuloApuntes">
-      <p><b>Literales reales:</b> sin sufijo o con el sufijo d o D es del tipo <b>double</b>.Con el sufijo f o F es del tipo <b>float</b>. Con el sufijo m o M es del tipo <b>decimal</b>.</p>
+      <p><strong>Literales reales:</strong> sin sufijo o con el sufijo d o D es del tipo <strong>double</strong>.Con el sufijo f o F es del tipo <strong>float</strong>. Con el sufijo m o M es del tipo <strong>decimal</strong>.</p>
     </article>
     <article class="articuloApuntes">
-      <p><b>Literales de lógicos:</b> representados por los valores lógicos true (verdadero) y false (falso).</p>
+      <p><strong>Literales de lógicos:</strong> representados por los valores lógicos true (verdadero) y false (falso).</p>
     </article>  
     <article class="articuloApuntes">
-      <p><b>Literales de carácter:</b> cualquier carácter en C# podemos representarlo con comillas simpres ´´.</p>
+      <p><strong>Literales de carácter:</strong> cualquier carácter en C# podemos representarlo con comillas simpres ´´.</p>
       <p>Existen caracteres especiales:</p>
       <ul>
         <li>Comilla simple: \´</li>
@@ -223,7 +223,7 @@
         </tr>
       </table> 
     <article class="articuloApuntes">
-      <p>El <b>operador de incremento ++</b> puede ser aplicado como prefijo o sufijo de una variable. Sucede lo mismo con el operador decremento --.</p>
+      <p>El <strong>operador de incremento ++</strong> puede ser aplicado como prefijo o sufijo de una variable. Sucede lo mismo con el operador decremento --.</p>
       <p>La prioridad de los operadores (de mayor a menor):</p>
     </article>
     <article class="articuloApuntes">  
@@ -268,8 +268,8 @@
       </table>
     </article>
     <article class="articuloApuntes">
-      <p>El operador <b>AND lógico &</b> calcula el resultado de a & b es true si a y b se evalúan como true. Si no, el resultado es false.</p>
-      <p><b>&&</b> también evalúa sus operandos, pero no evalúa el operando derecho si el izquierdo es false.</p>
+      <p>El operador <strong>AND lógico &</strong> calcula el resultado de a & b es true si a y b se evalúan como true. Si no, el resultado es false.</p>
+      <p><strong>&&</strong> también evalúa sus operandos, pero no evalúa el operando derecho si el izquierdo es false.</p>
       <p>| calcula el resultado de a | b es true si a o b se evalúan como true. Si no, es false.</p>
       <p>|| también evalúa sus operandos pero no evalúa el operando derecho si el izquierdo se evalúa como true.</p>
       <p>^ es el operador exclusivo o XOR. La tabla de la verdad es:</p>
@@ -305,7 +305,7 @@
       </table>
     </article>
     <article class="articuloApuntes">
-      <p><b>El operador !</b> calcula la negación de su operando, si el operando es true, devolverá el valor false y viceversa.</p>
+      <p><strong>El operador !</strong> calcula la negación de su operando, si el operando es true, devolverá el valor false y viceversa.</p>
     </article>
     <h4 class="subTitulo_4">Operadores de comparación e igualdad</h4>
     <article class="articuloApuntes">
@@ -358,8 +358,8 @@
     <article class="articuloApuntes">
       <p>Cuando declaramos una variable, no se puede volver a declarar, ni asignar un valor de otro tipo. En ocasiones, podemos convertir el valor de una variable de un tipo a otro. Podemos tener diferentes clases de conversiones:</p>
       <ul>
-        <li><b>Conversiones implícitas:</b> son aquellas que se producen cuadno el valor que se va a almacenar se puede almacenar en una variable sin truncarse ni redondearse. Por ejemplo almacenar una variable int dentro de una variable long.</li>
-        <li><b>Conversiones explícitas:</b> cuando no hay posibilidad de realizar una conversión implícita debemos indicar al compilador que se pretende realizar una conversión que pueda producir una pérdida de datos.</li>
+        <li><strong>Conversiones implícitas:</strong> son aquellas que se producen cuadno el valor que se va a almacenar se puede almacenar en una variable sin truncarse ni redondearse. Por ejemplo almacenar una variable int dentro de una variable long.</li>
+        <li><strong>Conversiones explícitas:</strong> cuando no hay posibilidad de realizar una conversión implícita debemos indicar al compilador que se pretende realizar una conversión que pueda producir una pérdida de datos.</li>
       </ul>
     </article>
     <h4 class="subTitulo_4">Parse y TryParse</h4>
@@ -416,10 +416,10 @@
     <a name="2.6"></a>
     <h3 class="subTitulo_3">Comentario al código</h3>
     <article class="articuloApuntes">
-      <p>No debemos pasar por alto que, además de realizar programas, lo debemos hacer de la forma más optimizada y ordenada posible. Los <b>comentarios</b> son una herramienta disponible en el compilador para que se puedan hacer anotaciones en el código sin que sea procesado por el compilador. Está permitido hacer dos tipos de comentarios:</p>
+      <p>No debemos pasar por alto que, además de realizar programas, lo debemos hacer de la forma más optimizada y ordenada posible. Los <strong>comentarios</strong> son una herramienta disponible en el compilador para que se puedan hacer anotaciones en el código sin que sea procesado por el compilador. Está permitido hacer dos tipos de comentarios:</p>
       <ul>
-        <li><b>Comentarios de una línea:</b> son frases cortas, solo pueden ocupar una línea del código. Para comenzar escribir // antes de comenzar con dichas anotaciones.</li>
-        <li><b>Comentarios multiline o multilíneas:</b> Son comentarios de varias líneas, para una explicación más detallada. Debemos englobar el contenido entre los caracteres /* y */.</li>
+        <li><strong>Comentarios de una línea:</strong> son frases cortas, solo pueden ocupar una línea del código. Para comenzar escribir // antes de comenzar con dichas anotaciones.</li>
+        <li><strong>Comentarios multiline o multilíneas:</strong> Son comentarios de varias líneas, para una explicación más detallada. Debemos englobar el contenido entre los caracteres /* y */.</li>
       </ul>
       <p>El uso de comentarios es muy útil, se aconseja su uso para documentar correctamente el código.</p>
     </article>
