--- a/daw/proUno/proTres.html
+++ b/daw/proUno/proTres.html
@@ -74,7 +74,7 @@
       <p>Ciclo de vida de un programa informático:</p>
       <ul>
         <li>
-          <b>Análisis de requisitos:</b>
+          <strong>Análisis de requisitos:</strong>
           <p>
             Apartir de las necesidades del usuario o programa, se decide qué hay que hacer para llegar a la solución óptima, y se genera un documento de requisitos. Es la etapa más importante. Existen varias técnicas:
           </p>
@@ -87,7 +87,7 @@
           </ul>
         </li>
         <li>
-          <b>Diseño de la arquitectura:</b>
+          <strong>Diseño de la arquitectura:</strong>
           <p>
             Estudio para ver los distintos componentes que van a formar el programa (módulos, subsistemas, etc.). Esta fase se revisará cuantas veces sean necesarias hasta estar seguro que es la mejor solución.
           </p>
@@ -97,25 +97,25 @@
           </ul>
         </li>
         <li>
-          <b>Etapa de implementación o codificación:</b>
+          <strong>Etapa de implementación o codificación:</strong>
           <p>
             Pasamos a codificar las aplicaciones que hemos elegido en la etapa anterior, empleando el lenguaje de programación con el que estemos trabajando. Vamos a obtener el código fuente.
           </p>
         </li>
         <li>
-          <b>Pruebas de integración:</b>
+          <strong>Pruebas de integración:</strong>
           <p>
             Hay que realizar ensayos del funcionamiento, combinando todos los módulos de la aplicación. Haciendo funcionar la aplicación completa, comprobamos que cumple con lo establecido.
           </p>
         </li>
         <li>
-          <b>Pruebas de validación:</b>
+          <strong>Pruebas de validación:</strong>
           <p>
             Último paso de la integración, realizamos nuevas pruebas en su conjunto. El objetivo es asegurar que cumple con el diseño y cubre las necesidades de los usuarios.
           </p>
         </li>
         <li>
-          <b>Fase de mantenimiento:</b>
+          <strong>Fase de mantenimiento:</strong>
           <p>
             Revisar todo lo anterior e ir actualizando o modificando los cambios oportunos.
           </p>
@@ -143,8 +143,8 @@
       </ul>
       <p>Tenemos dos tipos de técnicas de pruebas:</p>
       <ul>
-        <li><b>De caja blanca:</b> donde se valida la estructura del sistema.</li>
-        <li><b>De caja negra:</b> Se analizan las entradas y salidas del sistema sin tener en cuenta el funcionamiento interno.</li>
+        <li><strong>De caja blanca:</strong> donde se valida la estructura del sistema.</li>
+        <li><strong>De caja negra:</strong> Se analizan las entradas y salidas del sistema sin tener en cuenta el funcionamiento interno.</li>
       </ul>
       <p>
         El plan de prueba consta de varias etapas, si extiste algún tipo de fallo, tendremos que volver a empezar con el nuevo código modificado.
@@ -165,21 +165,21 @@
       </p>
       <ul>
         <li>
-          <b>Simples predefinidos:</b>
+          <strong>Simples predefinidos:</strong>
           <p>
             Entre sus propiedades podemos destacar que son indivisibles, tienen existencia propia y permiten operadores relacionales. Se utilizan sin necesidad de ser definidos previamente:
           </p>
           <ul>
-            <li><b>Natural:</b> números naturales (N) = byte, uint, ushort, ulong.</li>
-            <li><b>Entero:</b> números enteros (Z) = sbyte, int, long, short.</li>
-            <li><b>Real:</b> números reales (R) = decimal, float, double.</li>
-            <li><b>Carácter:</b> caracteres (C) = char.</li>
-            <li><b>Lógico:</b> booleanos (B) = bool.</li>
+            <li><strong>Natural:</strong> números naturales (N) = byte, uint, ushort, ulong.</li>
+            <li><strong>Entero:</strong> números enteros (Z) = sbyte, int, long, short.</li>
+            <li><strong>Real:</strong> números reales (R) = decimal, float, double.</li>
+            <li><strong>Carácter:</strong> caracteres (C) = char.</li>
+            <li><strong>Lógico:</strong> booleanos (B) = bool.</li>
           </ul>
         </li>
         <li>
-          <b>Simples definidos por el usuario:</b>
-          <b>Enumerados:</b>
+          <strong>Simples definidos por el usuario:</strong>
+          <strong>Enumerados:</strong>
           <p>
             Es definido por el usuario, así como un conjunto de constantes. Se utiliza la palabra enum y especificamos los nombres de los componentes de la enumeración.
           </p>
@@ -191,13 +191,13 @@
       <p>Se crean mediante la unión de varios tipos.</p>
       <ul>
         <li>
-          <b>Vectores:</b>
+          <strong>Vectores:</strong>
           <p>
             Estructura donde almacenamos varias variables del mismo tipo. Se puede declarar una matriz si se especifica el tipo de sus elementos (Arrays). Precisa indicador  de posición para acceder a un elemento de la tabla.
           </p>
         </li>
         <li>
-          <b>Matrices:</b>
+          <strong>Matrices:</strong>
           <p>
             Unión de varios vectores de cualquier tipo simple (enteros, reales, etc.). Son arrays bidimensionales, necesitan dos indicadores de posición para acceder al elemento.
           </p>
@@ -294,13 +294,13 @@
     <article class="articuloApuntes">
       <h4 class="subTitulo_4">Operadores lógicos</h4>
       <p>
-        <b>&&</b> - <b>AND:</b> ambas condiciones deben cumplirse para entrar en el bloque IF. No evalúa el operando derecho si el izquierdo es false.
+        <strong>&&</strong> - <strong>AND:</strong> ambas condiciones deben cumplirse para entrar en el bloque IF. No evalúa el operando derecho si el izquierdo es false.
       </p>
       <p>
-        <b>||</b> - <b>OR:</b> es suficiente con que una de las condiciones se cumpla para entrar en el bloque IF. El resultado de x || y es true si x o y es true.
+        <strong>||</strong> - <strong>OR:</strong> es suficiente con que una de las condiciones se cumpla para entrar en el bloque IF. El resultado de x || y es true si x o y es true.
       </p>
       <p>
-        <b>^</b> - <b>XOR:</b> el resultado se evalúa como true si una condición se evalúa como false y otra como true. Si ambas condiciones se evalúan como false o como true, el resultado será false.
+        <strong>^</strong> - <strong>XOR:</strong> el resultado se evalúa como true si una condición se evalúa como false y otra como true. Si ambas condiciones se evalúan como false o como true, el resultado será false.
       </p>
       <p>
         <pre>
@@ -634,17 +634,17 @@
         Hay tres tipos de errores diferentes:
       </p>
       <ul>
-        <li><b>Compilación o sintaxis:</b> errores en el código</li>
-        <li><b>Tiempo de ejecución:</b> los que producen un fallo a la hora de ejecutar el programa. Son fragmentos de código que parecen estar correctos y que no tienen ningún error de sintaxis, pero que no se ejecutarán.</li>
-        <li><b>Lógicos:</b> aquellos que dan resultados erróneos, diferentes a los esperados o no deseados, en respuesta a las acciones del usuario. Los más difíciles de corregir, ya que no siempre está claro dónde se originan.</li>
+        <li><strong>Compilación o sintaxis:</strong> errores en el código</li>
+        <li><strong>Tiempo de ejecución:</strong> los que producen un fallo a la hora de ejecutar el programa. Son fragmentos de código que parecen estar correctos y que no tienen ningún error de sintaxis, pero que no se ejecutarán.</li>
+        <li><strong>Lógicos:</strong> aquellos que dan resultados erróneos, diferentes a los esperados o no deseados, en respuesta a las acciones del usuario. Los más difíciles de corregir, ya que no siempre está claro dónde se originan.</li>
       </ul>
       <p>
         Para depurar errores, tenemos la opción de poner un punto de interrupción en una determinada línea de código, presionando F9. Para ejecutar la aplicación debemos presionar F5, se detiene en la línea y podremos examinar cuánto valen las variables para ir realizando su seguimiento, o podemos comprobar cuándo finalizan los bucles. Para depurar el código paso a paso F10.
       </p>
       <ul>
-        <li><b>Errores de compilación:</b> Impiden la ejecución. Inicialmente se compila el programa y si el compilador encuentra cualquier cosa que no entiende, lanza un error. Casi todos se producen mientras escribimos en código.</li>
-        <li><b>Errores en tiempo de ejecución:</b> Aparecen mientras se ejecuta el programa, cuando se pretende realizar una operación que no lleva a ninguna solución.</li>
-        <li><b>Errores lógicos:</b> El código se puede compilar y ejecutar sin problema, pero, en el caso de que compile, devuelve algo que no era la solución que se esperaba. Su corrección es más difícil, tenemos que encontrar el error en un programa que sí funciona, pero que funciona de forma diferente a la que debería.</li>
+        <li><strong>Errores de compilación:</strong> Impiden la ejecución. Inicialmente se compila el programa y si el compilador encuentra cualquier cosa que no entiende, lanza un error. Casi todos se producen mientras escribimos en código.</li>
+        <li><strong>Errores en tiempo de ejecución:</strong> Aparecen mientras se ejecuta el programa, cuando se pretende realizar una operación que no lleva a ninguna solución.</li>
+        <li><strong>Errores lógicos:</strong> El código se puede compilar y ejecutar sin problema, pero, en el caso de que compile, devuelve algo que no era la solución que se esperaba. Su corrección es más difícil, tenemos que encontrar el error en un programa que sí funciona, pero que funciona de forma diferente a la que debería.</li>
       </ul>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
