--- a/daw/proUno/proUno.html
+++ b/daw/proUno/proUno.html
@@ -50,20 +50,20 @@
     <h4 class="subTitulo_4">Caractéristicas de un programa:</h4>
     <article class="articuloApuntes">
       <ul>
-        <li><b>Finito:</b> formado por un conjunto limitado de
+        <li><strong>Finito:</strong> formado por un conjunto limitado de
           sentencias.</li>
-        <li><b>Legible:</b> es importante crear códigos limpios y
+        <li><strong>Legible:</strong> es importante crear códigos limpios y
           fáciles de leer con tabulaciones y espacios que diferencien
           las partes del programa.</li>
-        <li><b>Modificable:</b> debe ser sencillo el proceso de actualización
+        <li><strong>Modificable:</strong> debe ser sencillo el proceso de actualización
           o modificación ante nuevas necesidades.</li>
-        <li><b>Eficiente:</b> debemos crear programas que ocupen
+        <li><strong>Eficiente:</strong> debemos crear programas que ocupen
           poco espacio en memoria y se ejecuten rápidamente.</li>
-        <li><b>Modulable:</b> debemos realizar algoritmos que se
+        <li><strong>Modulable:</strong> debemos realizar algoritmos que se
           dividan a su vez en subalgoritmos de forma que se disponga
           de un grupo principal desde el que llamaremos al
           resto. Así, incitamos a la reutilización de código.</li>
-        <li><b>Estructurado:</b> será fácil de leer y modificar, 
+        <li><strong>Estructurado:</strong> será fácil de leer y modificar, 
           y estará compuesto de subprogramas que permitirán la 
           reutilización de código.</li>
       </ul>
@@ -83,30 +83,30 @@
     <h4 class="subTitulo_4">Debemos usar una serie de símbolos:</h4>
     <article class="articuloApuntes">
       <p>
-        <b>Rectángulo esquinas redondas:</b> Indican inicio o fin de programa.
+        <strong>Rectángulo esquinas redondas:</strong> Indican inicio o fin de programa.
         <img src="../../img/rectanguloR.png">
       </p><br>
       <p>
-        <b>Rectángulo:</b> Representan una instrucción, un paso a dar o un proceso.
+        <strong>Rectángulo:</strong> Representan una instrucción, un paso a dar o un proceso.
         <img src="../../img/rectangulo.png">
       </p><br>
       <p>
-        <b>Paralelogramo:</b> Operaciones de entrada/salida de datos.
+        <strong>Paralelogramo:</strong> Operaciones de entrada/salida de datos.
         <img src="../../img/paralelo.png">
       </p><br>
       <p>
-        <b>Rombo:</b> Usaremos este símbolo si nos encontramos en un punto en el
+        <strong>Rombo:</strong> Usaremos este símbolo si nos encontramos en un punto en el
         que se realizará una u otra acción en función de una decisión.
         <img src="../../img/rombo.png">
       </p><br>
       <p>
-        <b>Circulo:</b> Conector. Permite unir diferentes zonas del diagrama de
+        <strong>Circulo:</strong> Conector. Permite unir diferentes zonas del diagrama de
         forma que se redefine el flujo de ejecución hacia otra parte
         del diagrama.
         <img src="../../img/circulo.png">
       </p><br>
       <p>
-        <b>Flechas:</b> para indicar la dirección de flujo.
+        <strong>Flechas:</strong> para indicar la dirección de flujo.
         <img src="../../img/flechas.png">
       </p>
     </article>
