--- a/daw/sistemas/sistemasTres.html
+++ b/daw/sistemas/sistemasTres.html
@@ -36,13 +36,13 @@
         <p>Un sistema de archivos tiene dos tipos de objetos fundamentales:</p>
         <ul>
           <li>
-            <b>Archivos</b>
+            <strong>Archivos</strong>
             <p>
               Son un conjunto de datos ordenados en los que se almacena la información. Tenemos los que emplea el S.O. y los que generamos nosotros mediante aplicaciones.
             </p>
           </li>
           <li>
-            <b>Directorios</b>
+            <strong>Directorios</strong>
             <p>
               Nos ofrecen la posibilidad de clasificar los datos (archivos), y poner orden en el sistema. Se define como un contenedor de archivos y otros directorios.
             </p>
@@ -73,19 +73,19 @@
         </p>
         <ul>
           <li>
-            <b>fat32 (Tabla de asignación de archivos)</b>
+            <strong>fat32 (Tabla de asignación de archivos)</strong>
             <p>
               Sistema de archivos heredados de MS-DOS que podamos encontrar en las primeras versiones de Windows. Se considera un sistema universal y aún se utiliza con cierta frecuencia.
             </p>
           </li>
           <li>
-            <b>NTFS (New Technology File System)</b>
+            <strong>NTFS (New Technology File System)</strong>
             <p>
               Diseñado para versiones más recientes de Windows. Con él se consigue una mayor eficiencia y seguridad.
             </p>
           </li>
           <li>
-            <b>ext2, ext3 y ext4</b>
+            <strong>ext2, ext3 y ext4</strong>
             <p>
               Diferentes versiones del sistema de archivos que encotramos principalmente en Linux.
             </p>
@@ -292,33 +292,33 @@
         <p>En Windows desctacan las siguientes carpetas:</p>
         <ul>
           <li>
-            <b>Windows:</b>
+            <strong>Windows:</strong>
             <p>Contiene los archivos del S.O.</p>
           </li>
           <li>
-            <b>Archivos de programa:</b>
+            <strong>Archivos de programa:</strong>
             <p>Aquí se guardan todos los programas que tengamos intalados en el PC</p>
           </li>
           <li>
-            <b>Documents and settings:</b>
+            <strong>Documents and settings:</strong>
             <p>Se guardan los datos de los usuarios que acceden al equipo, su escritorio, sus favoritos, etc...</p>
           </li>
           <li>
-            <b>Subcarpetas:</b>
+            <strong>Subcarpetas:</strong>
             <ul>
               <li>
-                <b>Archivos comunes:</b>
+                <strong>Archivos comunes:</strong>
                 <p>Contiene datos de programas que van a utilizar varios usuarios o aplicaciones</p>
               </li>
               <li>
-                <b>Usuarios:</b>
+                <strong>Usuarios:</strong>
                 <p>Carpetas de los diferentes usuarios. Encontramos:</p>
                 <ul>
-                  <li><b>Cookies:</b> cookies de páginas web.</li>
-                  <li><b>Escritorio:</b> contenidos de los accesos directos, archivos y carpetas del escritorio</li>
-                  <li><b>Favoritos:</b> páginas web agregadas como favoritas</li>
-                  <li><b>Menú inicio:</b> accesos directos del menú inicio del usuario</li>
-                  <li><b>Mis documentos:</b> archivos personales del usuario</li>
+                  <li><strong>Cookies:</strong> cookies de páginas web.</li>
+                  <li><strong>Escritorio:</strong> contenidos de los accesos directos, archivos y carpetas del escritorio</li>
+                  <li><strong>Favoritos:</strong> páginas web agregadas como favoritas</li>
+                  <li><strong>Menú inicio:</strong> accesos directos del menú inicio del usuario</li>
+                  <li><strong>Mis documentos:</strong> archivos personales del usuario</li>
                 </ul>
               </li>
             </ul>
@@ -338,8 +338,8 @@
         </p>
         <p>En Dos y Windows disponemos de los siguientes:</p>
         <ul>
-          <li><b>Asteristico(*):</b> sustituye cadenas completas y podemos utilizarlo para remplazar el nombre completo o alguna parte del nombre de cualquier archivo. También puede remplazar su extensión.</li>
-          <li><b>Interrogación(?):</b> remplaza un solo carácter, aunque se pueden poner varios símbolos de interrrogación, según las necesidades.</li>
+          <li><strong>Asteristico(*):</strong> sustituye cadenas completas y podemos utilizarlo para remplazar el nombre completo o alguna parte del nombre de cualquier archivo. También puede remplazar su extensión.</li>
+          <li><strong>Interrogación(?):</strong> remplaza un solo carácter, aunque se pueden poner varios símbolos de interrrogación, según las necesidades.</li>
         </ul>
         <p>También podemos buscar ficheros desde el símbolo del sistema así:</p>
         <p>DIR[fichero a buscar]/s</p>
@@ -416,13 +416,13 @@
         </p>
         <ul>
           <li>
-            <b>Copias de seguridad</b>
+            <strong>Copias de seguridad</strong>
             <p>
               Una de las tareas más importantes, también conocidas como backups, incluyen toda la información almacenada en el sistema, que podremos restaurar ante cualquier fallo en cuestión de minutos.
             </p>
           </li>
           <li>
-            <b>Antivirus</b>
+            <strong>Antivirus</strong>
             <p>Automatizar los análisis del sistema.</p>
           </li>
         </ul>
