--- a/daw/sistemas/sistemasUno.html
+++ b/daw/sistemas/sistemasUno.html
@@ -26,8 +26,8 @@
       <article class="articuloApuntes">
         <h3 class="subTitulo_3">Introducción</h3>
           <ul>
-            <li><b>Sistema Informático:</b> Es aquel que almacena y procesa información interrelacionando el hardware y software de un ordenador. </li>
-            <li><b>Software Libre:</b> Implica que los usuarios podrán modificar, copiar, ejecutar e incluso mejorar dicho programa.</li>
+            <li><strong>Sistema Informático:</strong> Es aquel que almacena y procesa información interrelacionando el hardware y software de un ordenador. </li>
+            <li><strong>Software Libre:</strong> Implica que los usuarios podrán modificar, copiar, ejecutar e incluso mejorar dicho programa.</li>
           </ul>
         <p>Para cubrir las necesidades que se nos plantean en el ámbito de la informática es preciso conocer en profundidad:</p>
         <ol>
@@ -145,10 +145,10 @@
         <p>Los sitemas operativos han evoluciodo de forma notable, las consolas tipo texto han dejado paso a interfaces de tipo gráfico como windows o mac os x.</p>
         <p>Podemos distinguir en la arquitectura los siguientes elementos clave: <br></p>
           <ul>
-            <li><b>Núcleo del Sistema:</b> Componente que está ejecutandose permanentemente en la memoria. Se encargará de gestionar los recusrsos del ordenador, destacar la de asignar CPU y memoria a los procesos.</li>
-            <li><b>La API del núcleo:</b> API(interfaz de programación de aplicaciones) comprende el conjunto de servicios que ofrece el sistema operativo a las aplicaciones estos pueden llamar al sistema operativo para valerse de él. <br>Mediante dichas llamadas el sistema puede efectuar operaciones básicas como abrir archivos, modificarlos, cerrarlos, etc. Puede ejecutar instruciones de entrada/salida para operaciones relacionadas con gráficos y sonido, comunicaciones, etc.</li>
-            <li><b>El sistema de archivos:</b> Con él obtenemos una estructura lógica de la información grabada en las unidades de disco y podemos trabajar con directorios y archivos. Es frecuente que forme parte del kernel o núcleo.</li>
-            <li><b>Controladores o drivers:</b> Permite que el sistema interactue con los dispositivos hardware del equipo. <br> La gestión se lleva a cabo a partir de ordenes que recibe el sistema operativo. Para introducirlas podemos usar la interfaz gráfica o la consola.</li>
+            <li><strong>Núcleo del Sistema:</strong> Componente que está ejecutandose permanentemente en la memoria. Se encargará de gestionar los recusrsos del ordenador, destacar la de asignar CPU y memoria a los procesos.</li>
+            <li><strong>La API del núcleo:</strong> API(interfaz de programación de aplicaciones) comprende el conjunto de servicios que ofrece el sistema operativo a las aplicaciones estos pueden llamar al sistema operativo para valerse de él. <br>Mediante dichas llamadas el sistema puede efectuar operaciones básicas como abrir archivos, modificarlos, cerrarlos, etc. Puede ejecutar instruciones de entrada/salida para operaciones relacionadas con gráficos y sonido, comunicaciones, etc.</li>
+            <li><strong>El sistema de archivos:</strong> Con él obtenemos una estructura lógica de la información grabada en las unidades de disco y podemos trabajar con directorios y archivos. Es frecuente que forme parte del kernel o núcleo.</li>
+            <li><strong>Controladores o drivers:</strong> Permite que el sistema interactue con los dispositivos hardware del equipo. <br> La gestión se lleva a cabo a partir de ordenes que recibe el sistema operativo. Para introducirlas podemos usar la interfaz gráfica o la consola.</li>
           </ul>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
