--- a/daw/bdUno/bdUnoUno.html
+++ b/daw/bdUno/bdUnoUno.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="../../css/mediaQ.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Smooch&family=Titan+One&display=swap" rel="stylesheet">
   <title>Bases de Datos I</title>
 </head>
     <body>
@@ -253,6 +253,6 @@
                 <a href="#unoUno"><div class="botonO">Arriba</div></a>
             </div>
         </div><!-- Fin contenedorApuntes -->
-        <footer class="pieApuntes"><div>SapheryDesings - 2023</div></footer>
+        <footer class="pieApuntes"><div>- SapheryDesings -</div></footer>
     </body>
 </html>
